--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
 }
 
 body {
-    background-color: #f2f2f2;
+    background-image: url("./assets/background.png");
+    background-size: cover;
+    backdrop-filter: blur(5px);
 }
 
 .app {
